--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1753,73 +1753,120 @@ body {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #c1c1c1 !important;
 }
-.cid-qTkA127IK8 {
-  background-image: url("../../../assets/images/jumbotron.jpg");
+.cid-qVLnFOQONs {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #fafafa;
 }
-.cid-qTkAaeaxX5 {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #2e2e2e;
+.cid-qVLnFOQONs h3 {
+  text-align: center;
+  font-weight: 300;
 }
-@media (max-width: 767px) {
-  .cid-qTkAaeaxX5 .content {
-    text-align: center;
+.cid-qVLnFOQONs .wrap {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+}
+.cid-qVLnFOQONs .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qVLnFOQONs .card {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  word-wrap: break-word;
+}
+.cid-qVLnFOQONs ellipse {
+  stroke: rgba(206, 206, 206, 0.4);
+}
+.cid-qVLnFOQONs path {
+  stroke: #149dcc;
+}
+@media (max-width: 991px) and (min-width: 768px) {
+  .cid-qVLnFOQONs .card {
+    -webkit-flex-basis: 33%;
+    flex-basis: 33%;
   }
-  .cid-qTkAaeaxX5 .content > div:not(:last-child) {
-    margin-bottom: 2rem;
-  }
 }
-@media (max-width: 767px) {
-  .cid-qTkAaeaxX5 .media-wrap {
-    margin-bottom: 1rem;
-  }
+.cid-qVLnGGw7su {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #fafafa;
 }
-.cid-qTkAaeaxX5 .media-wrap .mbr-iconfont-logo {
-  font-size: 7.5rem;
-  color: #f36;
+.cid-qVLnGGw7su h3 {
+  text-align: center;
+  font-weight: 300;
 }
-.cid-qTkAaeaxX5 .media-wrap img {
-  height: 6rem;
+.cid-qVLnGGw7su .progress {
+  width: 100%;
 }
-@media (max-width: 767px) {
-  .cid-qTkAaeaxX5 .footer-lower .copyright {
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-}
-.cid-qTkAaeaxX5 .footer-lower hr {
-  margin: 1rem 0;
-  border-color: #fff;
-  opacity: .05;
-}
-.cid-qTkAaeaxX5 .footer-lower .social-list {
-  padding-left: 0;
-  margin-bottom: 0;
-  list-style: none;
+.cid-qVLnGGw7su .title-wrap {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  -webkit-justify-content: flex-end;
+  justify-content: space-between;
 }
-.cid-qTkAaeaxX5 .footer-lower .social-list .mbr-iconfont-social {
-  font-size: 1.3rem;
-  color: #fff;
+.cid-qVLnGGw7su progress {
+  height: 8px;
 }
-.cid-qTkAaeaxX5 .footer-lower .social-list .soc-item {
-  margin: 0 .5rem;
+.cid-qVLnGGw7su .progressbar-number {
+  display: inline-block;
 }
-.cid-qTkAaeaxX5 .footer-lower .social-list a {
-  margin: 0;
-  opacity: .5;
-  -webkit-transition: .2s linear;
-  transition: .2s linear;
+.cid-qVLnGGw7su .progress-primary {
+  background: rgba(206, 206, 206, 0.4);
+  border: none;
+  outline: none;
 }
-.cid-qTkAaeaxX5 .footer-lower .social-list a:hover {
-  opacity: 1;
+.cid-qVLnGGw7su .progress-primary::-webkit-progress-bar {
+  background: rgba(206, 206, 206, 0.4);
 }
-@media (max-width: 767px) {
-  .cid-qTkAaeaxX5 .footer-lower .social-list {
-    justify-content: center;
-    -webkit-justify-content: center;
+.cid-qVLnGGw7su .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-qVLnGGw7su .section-content-title {
+  font-weight: 500;
+}
+.cid-qVLnGGw7su .progress_value {
+  position: relative;
+}
+.cid-qVLnGGw7su .progress1 .progressbar-number:before,
+.cid-qVLnGGw7su .progress2 .progressbar-number:before,
+.cid-qVLnGGw7su .progress3 .progressbar-number:before,
+.cid-qVLnGGw7su .progress4 .progressbar-number:before,
+.cid-qVLnGGw7su .progress5 .progressbar-number:before {
+  position: absolute;
+  right: 15px;
+  top: 0;
+}
+.cid-qVLnGGw7su progress[value]::-webkit-progress-bar {
+  background: rgba(206, 206, 206, 0.4);
+}
+.cid-qVLnGGw7su progress::-webkit-progress-value {
+  background: #149dcc;
+}
+.cid-qVLnGGw7su progress[value]::-moz-progress-bar {
+  background: #149dcc;
+}
+.cid-qVLnGGw7su progress::-ms-fill {
+  background: #149dcc;
+}
+.cid-qVLnGGw7su .progress1 .progressbar-number:before {
+  content: '100';
+}
+.cid-qVLnGGw7su .progress2 .progressbar-number:before {
+  content: '90';
+}
+.cid-qVLnGGw7su .progress3 .progressbar-number:before {
+  content: '80';
+}
+.cid-qVLnGGw7su .progress4 .progressbar-number:before {
+  content: '70';
+}
+.cid-qVLnGGw7su .progress5 .progressbar-number:before {
+  content: '60';
+}
+@media (min-width: 768px) {
+  .cid-qVLnGGw7su .text-elements {
+    padding-right: 3rem;
+  }
+  .cid-qVLnGGw7su .progress_elements {
+    padding-left: 3rem;
   }
 }
